<resources>
    <string name="app_name">Patrick Denney C196 Mobile App</string>
    <string name="view_terms">View Terms</string>
    <string name="view_assessments">View Assessments</string>
    <string name="view_courses">View Courses</string>
    <string name="addTerm">Add a Term</string>
    <string name="enter_a_title_for_the_term">Enter a Title for the Term</string>
    <string name="enter_start_date_of_term">Enter Start Date of Term</string>
    <string name="add_term">Add Term</string>
    <string name="enter_end_date_of_term">Enter End Date of Term</string>
    <string name="addCourse">Add a Course</string>
    <string name="update_term">Update Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="term_id">Term ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_the_courses_for_the_term">Edit the courses for the Term</string>
    <string name="deleteTermError">Please remove all courses from the term before deleting.</string>
    <string name="title_activity_assessment_add">AssessmentAdd</string>
    <string-array name="course_status_spinner_options">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string-array name="course_instructor_spinner_options">
        <item>Dr.Bob</item>
        <item>Mr.Ted</item>
        <item>Dr.Sally</item>
        <item>Dr.Louise</item>
    </string-array>
    <string-array name="add_assessment_spinner_options">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="addAssessBtn">TODO</string>
    <string name="add_a_title_for_the_course">Course Title</string>
    <string name="you_can_add_assessments_to_the_course_after_you_add_the_course_select_the_course_from_the_course_list_and_add_any_assessments_there">You can add Assessments to the Course after you add the Course. Select the Course from the Course List and add any assessments there.</string>
    <string name="enter_a_start_date_for_the_course">Course Start Date</string>
    <string name="enter_an_end_date_for_the_course">Course End Date</string>

    <string name="enter_a_title_for_the_assessment">Assessment Title</string>
    <string name="enter_an_end_date_for_the_assessment">Assessment End Date</string>
    <string name="add_course">Add Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="course_associated_with_this_assessment">Associated Course</string>
    <string name="status">Status</string>
    <string name="enter_course_notes">Enter Course Notes</string>
    <string name="instructor">Instructor</string>
    <string name="associated_term">Associated Term</string>
    <string name="to_remove_courses_from_this_term_use_the_course_edit_screen">To remove courses from this Term. Use the Course edit Screen.</string>
    <string name="courses_if_any_will_appear_here">Courses, if any will appear here</string>
    <string name="edit_the_title_for_the_course">Edit Course Title</string>
    <string name="edit_start_date_for_the_course">Edit Course Start</string>
    <string name="edit_end_date_for_the_course">Edit Course End</string>
    <string name="update_course">Update Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="enter_an_instructor_name">Enter an Instructor Name</string>
    <string name="instructor_phone_number">Instructor Phone Number</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="associated_assessments">Associated Assessments</string>
    <string name="to_add_or_remove_associated_assessments_use_the_assessment_edit_function">To add or remove associated assessments, use the Assessment Edit function.</string>
    <string name="associated_course">Associated Course</string>
    <string name="assess_ID">assess ID</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="course_title">Course</string>
    <string name="editAssessmentID">Assessment ID</string>
    <string name="edit_Assessment_delete_btn">Delete Assessment</string>
    <string name="update_assessment">UPDATE ASSESSMENT</string>
    <string name="course">Course</string>
    <string name="current_type_of_exam">Current type of Exam</string>
    <string name="current_associated_course">Current Associated Course</string>
    <string name="share_notes">share notes</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_reminder_for_start">Set Reminder For Start</string>
    <string name="set_reminder_for_end">Set Reminder For End</string>
    <string name="assessment_start_date">Assessment Start Date</string>
</resources>