<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".TermAdd">

    <EditText
        android:id="@+id/editTermTitle"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#BBBBBB"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:text="@string/enter_a_title_for_the_term"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTermStart"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:text="@string/enter_start_date_of_term"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTermEnd"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/enter_end_date_of_term"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/addTermToDB"
        android:layout_width="146dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/btn"
        android:text="@string/add_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>